scss/component/loader/_loader.scss
$icon-size: clamp(24px, 4vw, 50px) !default;

.loader {
  position: fixed;
  z-index: 1;
  height: 100svh;
  width: 100%;
  overflow: hidden;
  background-color: rgb(119, 119, 119, 0.5);
  animation: fade 2.5s forwards linear;
  &::before, &::after {
    content: '';
    position: absolute;
    top: 50%;
    width: $icon-size;
    height: $icon-size;
  }

  &::before {
    right: -50px;
    background-image: url('../images/icon/cut.svg');
    animation: moveFromRight 2.5s forwards ease-out;
  }

  &::after {
    left: -50px;
    background-image: url('../images/icon/fork.svg');
    animation: moveFromLeft 2.5s forwards ease-out;
  }
}

@keyframes fade {
  75% {
    opacity: 1;
  }
  99% {
    opacity: 0;
  }
  100% {
    opacity: 0;
    display: none;
  }
}

@keyframes moveFromRight {
  10% {
    right: -50px;
  }
  40% {
    right: calc(50% - ($icon-size / 2));
  }
  60% {
    transform: rotateZ(0deg);
  }
  80% {
    transform: rotateZ(360deg);
    right: calc(50% - ($icon-size / 2));
    scale: 1;
    opacity: 1;
  }
  90% {
    transform: rotateZ(360deg);
    right: calc(50% - ($icon-size / 2));
  }
  99% {
    transform: rotateZ(360deg);
    right: calc(50% - ($icon-size / 2));
    scale: 1.5;
    opacity: 0;
  }
  100% {
    opacity: 0;
    display: none;
  }
}

@keyframes moveFromLeft {
  10% {
    left: -50px;
  }
  40% {
    left: calc(50% - ($icon-size / 2));
  }
  60% {
    transform: rotateZ(0deg);
  }
  80% {
    transform: rotateZ(360deg);
    left: calc(50% - ($icon-size / 2));
    scale: 1;
    opacity: 1;
  }
  90% {
    transform: rotateZ(360deg);
    left: calc(50% - ($icon-size / 2));
  }
  99% {
    transform: rotateZ(360deg);
    left: calc(50% - ($icon-size / 2));
    scale: 1.5;
    opacity: 0;
  }
  100% {
    opacity: 0;
    display: none;
  }
}

